objects/Melissa_Integration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Melissa custom Setting contains the user id information</description>
    <fields>
        <fullName>RequestTimeOut__c</fullName>
        <label>RequestTimeOut</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USAAddressEndPoint__c</fullName>
        <label>USA Address End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZipEndPointURL__c</fullName>
        <label>Zip End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>globalAddressEndPoint__c</fullName>
        <label>globalAddressEndPoint</label>
        <type>Url</type>
    </fields>
    <label>Melissa Integration</label>
</CustomObject>